--- a/views/dashboard/userProfile.jade
+++ b/views/dashboard/userProfile.jade
@@ -73,11 +73,11 @@ if isEditable
     include ../linkedInLogin
     script.
         var userId = '!{user.id}';
-        var user = JSON.parse( '!{JSON.stringify(user)}' );
+        var user = JSON.parse( '!{JSON.stringify(escapeObject(user))}' );
         var userProfile = JSON.parse ( '!{JSON.stringify(userProfile)}' );
         var userEducation = JSON.parse( '!{JSON.stringify(escapeObject(user.education))}' );
         var userEmployment = JSON.parse( '!{JSON.stringify(escapeObject(user.employment))}' );
-        var userExpertise = JSON.parse( '!{JSON.stringify(escapeObject(userexpertise))}' );
+        var userExpertise = JSON.parse( '!{JSON.stringify(escapeObject(userExpertise))}' );
         var unEscapeObject = !{unEscapeObject};
     script(src='/js/app/dashboard/userProfile.js')
     script(src='/js/app/dashboard/fileUpload.js')
