Fix in links in email sent on network registration completion Add privacy policy link in terms of use page Fix error on 404 page.

--- a/views/static/privacy-policy.jade
+++ b/views/static/privacy-policy.jade
@@ -155,7 +155,7 @@ body
                                   <br>
                                   By using this Site, you signify your acceptance of this policy and</span><span
                                   lang=EN-US style='font-size:10.0pt;font-family:"Arial","sans-serif";color:black'>&nbsp;</span><span
-                                  lang=EN-US><a href="http://www.searchntalk.com/terms"><span style='font-size:
+                                  lang=EN-US><a href="http://www.searchntalk.com/terms-of-use"><span style='font-size:
                                   10.0pt;font-family:"Arial","sans-serif";color:blue'>terms of service</span></a></span><span
                                   lang=EN-US style='font-size:10.0pt;font-family:"Arial","sans-serif";color:black'>.
                                   If you do not agree to this policy, please do not use our Site. Your continued
