--- a/views/static/terms-of-use.jade
+++ b/views/static/terms-of-use.jade
@@ -1079,8 +1079,10 @@ body
                         style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         </span></span><span lang=EN-US style='font-family:"Arial","sans-serif"'>Privacy
                         Policy</span></h1>
-                        <p class=MsoNormal><span lang=EN-US style='font-family:"Arial","sans-serif"'>&nbsp;</span></p>
+                        <p class=MsoNormal><span lang=EN-US style='font-family:"Arial","sans-serif"'>
+                        <a href="http://www.searchntalk.com/privacy"><span style='font-size:
+                        10.0pt;font-family:"Arial","sans-serif";color:blue'>Click Here to read Privacy Policy</a>
+                        </span></span></p>
                         <p class=MsoNormal><span lang=EN-US style='font-family:"Arial","sans-serif"'>&nbsp;</span></p>
                         </div>
-
 include ../footer
