Added icheck lib bootstrapvalidator v 0.5.0

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,3 +217,8 @@ select.btn {
         display: block;
     }
 }
+.iradio_square-green + span
+{
+    padding: 3px 0px 10px 10px;
+    display: inline-block;
+}
