Added icheck lib bootstrapvalidator v 0.5.0

--- a/views/dashboard/userProfile.jade
+++ b/views/dashboard/userProfile.jade
@@ -75,8 +75,8 @@ if isEditable
         var userId = '!{user.id}';
         var user = JSON.parse( '!{JSON.stringify(escapeObject(user))}' );
         var userProfile = JSON.parse ( '!{JSON.stringify(userProfile)}' );
-        var userEducation = JSON.parse( '!{JSON.stringify(escapeObject(user.education))}' );
-        var userEmployment = JSON.parse( '!{JSON.stringify(escapeObject(user.employment))}' );
+        var userEducation = JSON.parse( '!{JSON.stringify(escapeObject(user.education || {}))}' );
+        var userEmployment = JSON.parse( '!{JSON.stringify(escapeObject(user.employment || {}))}' );
         var userExpertise = JSON.parse( '!{JSON.stringify(escapeObject(userExpertise))}' );
         var unEscapeObject = !{unEscapeObject};
     script(src='/js/app/dashboard/userProfile.js')
