Fixes in callflow

--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -1,4 +1,4 @@
-- var pricing = user.pricing_scheme ? user.pricing_scheme[0] : null;
+- var pricing = user.pricing_schemes ? user.pricing_schemes[0] : null;
 - var minDuration = pricing ? pricing.min_duration : 15;
 title ST-#{formatName(user.first_name, user.last_name, user.title)}
 include ../header
