--- a/views/payment/payment.jade
+++ b/views/payment/payment.jade
@@ -1,5 +1,5 @@
 include ../header
-- var pricing = user.pricing_scheme[0]
+- var pricing = user.pricing_schemes[0]
 - var minDuration = pricing.min_duration
 style.
     #login-modal .register {
@@ -103,7 +103,7 @@ title ST-#{formatName(user.first_name, user.last_name, user.title)} | Payment fo
                                                         .table-cell.title Tax @#{Config.get(Config.CALL_TAX_PERCENT)}%
                                                     when 4
                                                         .table-cell.title Discount Coupon #{coupon.code}&nbsp;
-                                                            a.cancel-link(href=CallFlowUrls.removeCoupon() + '?code=#{coupon.code}') Remove
+                                                            a.cancel-link(href=PaymentUrls.removeCoupon() + '?code=#{coupon.code}') Remove
                                                 .table-cell.amount= formatMoney(line.amount, line.amount_unit)
                                     .table-row
                                         .table-cell.title
