static content updated

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -4,6 +4,12 @@ div.footer
             nav.navbar.navbar-default
                 ul.nav.navbar-nav
                     li
+                        a(href='/about-us') About Us
+                    li
+                        a(href='/contact-us') Contact Us
+                    li
+                        a(href='/faq') FAQs
+                    li
                         a(href='/terms-of-use') Terms of Use
                     li
                         a(href='/privacy') Privacy Policy
