--- a/views/static/terms-of-use.jade
+++ b/views/static/terms-of-use.jade
@@ -15,7 +15,7 @@ body
                         <p style='margin-top:15.0pt;margin-right:0cm;margin-bottom:15.0pt;margin-left:
                         36.0pt;text-align:justify;text-justify:inter-ideograph;line-height:15.6pt;
                         background:white'><span lang=EN-US style='font-size:11.0pt;font-family:"Arial","sans-serif"'>Thank
-                        you for using <a href="http://www.searchntalk.com"><span style='color:windowtext;
+                        you for using <a href=""><span style='color:windowtext;
                         text-decoration:none'>www.searchntalk.com</span></a> , owned and operated by
                         Infollion Research Services Private Limited. By accessing or using the
                         Searchntalk website, Searchntalk mobile clients, Searchntalk  software or other
@@ -45,9 +45,9 @@ body
                         reserves the right to amend this Agreement at any time and without notice.
                         Please read carefully these Terms and our Privacy Policy, as they may have
                         changed since your last visit, the latest version of which may be found at <a
-                        href="http://www.searchntalk.com/terms"><span style='color:windowtext;
+                        href="/terms"><span style='color:windowtext;
                         text-decoration:none'>www.searchntalk.com/terms</span></a> and <a
-                        href="http://www.searchntalk.com/privacy"><span style='color:windowtext;
+                        href="/privacy"><span style='color:windowtext;
                         text-decoration:none'>www.searchntalk.com/privacy</span></a> respectively, which
                         is incorporated by reference into these Terms. Your continued use of the
                         Service after any such changes constitutes your acceptance of the new Terms of
@@ -1080,7 +1080,7 @@ body
                         </span></span><span lang=EN-US style='font-family:"Arial","sans-serif"'>Privacy
                         Policy</span></h1>
                         <p class=MsoNormal><span lang=EN-US style='font-family:"Arial","sans-serif"'>
-                        <a href="http://www.searchntalk.com/privacy"><span style='font-size:
+                        <a href="/privacy"><span style='font-size:
                         10.0pt;font-family:"Arial","sans-serif";color:blue'>Click Here to read Privacy Policy</a>
                         </span></span></p>
                         <p class=MsoNormal><span lang=EN-US style='font-family:"Arial","sans-serif"'>&nbsp;</span></p>
