--- a/public/css/widget_light.css
+++ b/public/css/widget_light.css
@@ -350,7 +350,7 @@ body {
   color: #b20000;
 }
 .widget {
-  width: 160px;
+  width: 100%;
   padding: 4px;
   border: 1px solid #d9d9d9;
   background: #f2f2f2;
@@ -394,8 +394,8 @@ body {
 .widget .avatar {
   position: relative;
   overflow: hidden;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -409,8 +409,8 @@ body {
   width: 100%;
   height: 100%;
   z-index: 9996;
-  font-size: 150px;
-  line-height: 150px;
+  font-size: 100px;
+  line-height: 100px;
 }
 .widget .avatar .placeholder::before {
   color: rgba(0, 0, 0, 0.1);
@@ -425,8 +425,8 @@ body {
   width: 100%;
   height: 100%;
   z-index: 9996;
-  font-size: 150px;
-  line-height: 150px;
+  font-size: 100px;
+  line-height: 100px;
   font-family: 'snticons';
   content: '\e008';
 }
@@ -470,13 +470,13 @@ body {
   height: 4px;
 }
 .widget .avatar.avatar-big {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
 }
 .widget .username {
   padding: 5px;
-  font-size: 15px;
-  line-height: 15px;
+  font-size: 16px;
+  line-height: 18px;
   font-weight: bold;
 }
 .widget .keywords,
