Widget skills and hide name option

--- a/public/css/widget_light.css
+++ b/public/css/widget_light.css
@@ -507,7 +507,7 @@ body {
   color: #999999;
 }
 .widget .availability {
-  padding: 20px 0px;
+  padding: 5px 0px 0px;
   text-align: center;
   font-size: 12px;
   line-height: 15px;
