--- a/views/dashboard/widgetCreator.jade
+++ b/views/dashboard/widgetCreator.jade
@@ -40,6 +40,9 @@ title Widget Creator
                                     h3 Options
                                     .form-group
                                         p
+                                            input(type='checkbox', name='user_name', checked=true)
+                                            | Expert's name
+                                        p
                                             input(type='checkbox', name='profile_picture', checked=true)
                                             | Profile picture
                                         p
