Network profile page for payment gateway approval

--- a/views/500.jade
+++ b/views/500.jade
@@ -26,7 +26,7 @@ head
                         h1
                             strong 500&nbsp;
                             if error
-                                | #{error}
+                                | #{error.message}
                             else
                                 | An error occurred
                         p
