--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -1,4 +1,4 @@
-- var pricing = user.pricing_schemes ? user.pricing_schemes[0] : null;
+- var pricing = expertise ? expertise[0] : (user.pricing_schemes ? user.pricing_schemes[0] : null);
 - var minDuration = pricing ? pricing.min_duration : 15;
 title ST-#{formatName(user.first_name, user.last_name, user.title)}
 include ../header
@@ -161,6 +161,11 @@ div.modal.fade#scheduler
                                         ul
                                             each skill in user.skill
                                                 li= skill.skill.skill
+                            if expertise
+                                .meta.meta-price
+                                    h5 Session
+                                    p
+                                        span= expertise[0].title
                             .meta.meta-price
                                 h5 Charges
                                 p
