--- a/views/dashboard/userSettingSchedule.jade
+++ b/views/dashboard/userSettingSchedule.jade
@@ -77,7 +77,9 @@ title SNT-#{formatName(loggedInUser.first_name, loggedInUser.last_name)} | Setti
                                 .alert.alert-danger(style='display: none;')
                                 .item
                                     .row
-                                        h5.col-xs-8.title Schedule #1
+                                        .inputs.col-xs-8
+                                            .input-group
+                                                input.form-control(type='text', placeholder='Expertise Title', name='title')
                                         .header-link.col-xs-4
                                             a.btn.btn-danger.cancelEditCardBtn
                                                 i.icon-cancel
