--- a/views/dashboard/networkProfile.jade
+++ b/views/dashboard/networkProfile.jade
@@ -39,7 +39,7 @@ title Search Expert in Network - #{integration.title}
                                         h5.col-xs-12 Skills/Keywords
                                         .clearer
                                         ul
-                                            each skill in user.skills
+                                            each skill in expert.skills
                                                 li
                                                     | #{skill.skill.skill}
                                                     if isEditable
@@ -51,7 +51,7 @@ title Search Expert in Network - #{integration.title}
                                 a.btn.btn-primary.btn-block(target='_blank', href=CallFlowUrls.callExpert(expert.id))
                                     | CALL ME
                                 p(style='text-align: center;')
-                                    if expert.pricing_schemes
+                                    if expert.pricing_schemes.length != 0
                                         - var pricing = expert.pricing_schemes[0]
                                             strong= formatMoney(pricing.charging_rate, pricing.unit)
                                             if pricing.pulse_rate > 1
@@ -59,14 +59,12 @@ title Search Expert in Network - #{integration.title}
                                                 span= pricing.pulse_rate
                                                 | &nbsp;mins.
                                             else
-                                                | &nbsp;/ min.
+                                                | &nbsp;/ minute
                                                 if pricing.min_duration > 1
-                                                    br
-                                                    span.pull-right
-                                                        span.small
-                                                            | &nbsp;(minimum &nbsp;
-                                                            span= pricing.min_duration
-                                                            | &nbsp;mins.)
+                                                    span.small
+                                                        | &nbsp;(minimum &nbsp;
+                                                        span= pricing.min_duration
+                                                        | &nbsp;mins.)
                                     else
                                         strong Free
 include ../footer
