--- a/views/dashboard/mobileVerification.jade
+++ b/views/dashboard/mobileVerification.jade
@@ -38,5 +38,6 @@ include ../header
                                     .links-editing
                                         .edit-schedules
                                             input.btn.btn-primary.form-control(type='submit', value='Verify', name='verify')
+include ../timezoneCountryMap
 script(src='/js/app/dashboard/mobileVerification.js')
 include ../footer
