Default network if hardcoded

--- a/views/dashboard/dashboard.jade
+++ b/views/dashboard/dashboard.jade
@@ -16,7 +16,7 @@ title SearchNTalk - DashBoard
                                 p Need advice? Searchntalk is your one-stop solution to find experts who can help you instantly
                         .item
                             .row
-                                a.btn.btn-primary(href=DashboardUrls.networkProfile(Config.get(Config.DEFAULT_NETWORK_ID))) See Experts List
+                                a.btn.btn-primary(href=DashboardUrls.networkProfile(247507457)) See Experts List
             .content.col-md-3
                 .row
                     .card
